--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -68,48 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a Yambo calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 1,\n",
-       " 'ntasks_per_node': 32,\n",
-       " 'cpus_per_task': 1,\n",
-       " 'omp_num_threads': 1,\n",
-       " 'gpus_per_node': None,\n",
-       " 'memory': '125000',\n",
-       " 'time': None,\n",
-       " 'partition': 'slownodes',\n",
-       " 'account': None,\n",
-       " 'qos': None,\n",
-       " 'map_by': None,\n",
-       " 'pe': 1,\n",
-       " 'rank_by': None,\n",
-       " 'executable': 'yambo',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': True,\n",
-       " 'verbose': True,\n",
-       " 'fatlog': False}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -132,9 +93,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a Yambo calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 8,\n",
+       " 'ntasks_per_node': 4,\n",
+       " 'cpus_per_task': 32,\n",
+       " 'omp_num_threads': 8,\n",
+       " 'gpus_per_node': 4,\n",
+       " 'memory': '240GB',\n",
+       " 'time': '23:59:00',\n",
+       " 'partition': 'm100_usr_prod',\n",
+       " 'account': 'IscrC_PrExIn',\n",
+       " 'qos': None,\n",
+       " 'map_by': 'socket',\n",
+       " 'pe': 8,\n",
+       " 'rank_by': 'core',\n",
+       " 'executable': 'yambo',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': False,\n",
+       " 'verbose': True,\n",
+       " 'fatlog': False}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for m100\n",
     "nodes = 8 # 16\n",
@@ -210,19 +210,15 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Executing command: cd DFT_analysis/kpoints_18-nbnds_30.save; p2y\n",
-      "Create folder path GW_analysis/kpoints_18-nbnds_30\n",
-      "Create a symlink of DFT_analysis/kpoints_18-nbnds_30.save/SAVE in GW_analysis/kpoints_18-nbnds_30\n",
-      "Build the r_setup in the run_dir path GW_analysis/kpoints_18-nbnds_30\n"
+      "SAVE folder GW_analysis/kpoints_18-nbnds_30/SAVE already present. No operations performed.\n"
      ]
     }
    ],
    "source": [
-    "source_dir = 'DFT_analysis/kpoints_18-nbnds_30.save'\n",
+    "input_dir = 'DFT_analysis/kpoints_18-nbnds_30.save'\n",
     "run_dir = 'GW_analysis/kpoints_18-nbnds_30'\n",
     "\n",
-    "save_dir = Tools.make_p2y(source_dir)\n",
-    "Tools.init_yambo_run_dir(save_dir,run_dir=run_dir)"
+    "Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)"
    ]
   },
   {
@@ -847,11 +843,10 @@
     }
    ],
    "source": [
-    "source_dir = 'DFT_analysis/kpoints_18-nbnds_30.save'\n",
+    "input_dir = 'DFT_analysis/kpoints_18-nbnds_30.save'\n",
     "run_dir = 'GW_analysis/kpoints_18-nbnds_30'\n",
     "\n",
-    "save_dir = Tools.make_p2y(source_dir)\n",
-    "Tools.init_yambo_run_dir(save_dir,run_dir=run_dir)"
+    "Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)"
    ]
   },
   {
@@ -1163,9 +1158,9 @@
     "study.set_postprocessing_function(PP.yambo_parse_data)\n",
     "\n",
     "for k in kpoints:\n",
-    "    source_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
+    "    input_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
     "    run_dir = 'GW_analysis/kpoints_%s-nbnds_30'%k\n",
-    "    Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
+    "    Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
     "    \n",
     "    inp = I.YamboInput(args='yambo -r -x -V all',folder=run_dir)\n",
     "    inp.set_array_variables(units=EXXRLVcs_units,EXXRLvcs=EXXRLvcs,VXCRLvcs=EXXRLvcs)\n",
@@ -1376,9 +1371,9 @@
     "study = D.Dataset(num_tasks=2,verbose=True)\n",
     "study.set_postprocessing_function(PP.yambo_parse_data)\n",
     "\n",
-    "source_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
+    "input_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
     "run_dir = 'GW_analysis/kpoints_%s-nbnds_30'%k\n",
-    "Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
+    "Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
     "  \n",
     "inp = I.YamboInput(args='yambo -r -x -V all',folder=run_dir)\n",
     "inp['arguments'].append('UseNLCC')\n",
@@ -1530,9 +1525,9 @@
     "study = D.Dataset(num_tasks=2,verbose=True)\n",
     "study.set_postprocessing_function(PP.yambo_parse_data)\n",
     "\n",
-    "source_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
+    "input_dir = 'DFT_analysis/kpoints_%s-nbnds_30.save'%k\n",
     "run_dir = 'GW_analysis/kpoints_%s-nbnds_30'%k\n",
-    "Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
+    "Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
     "  \n",
     "inp = I.YamboInput(args='yambo -r -x -V all',folder=run_dir)\n",
     "inp.set_array_variables(units=EXXRLVcs_units,EXXRLvcs=EXXRLvcs)\n",
@@ -1708,24 +1703,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "SAVE folder DFT_analysis/kpoints_18-nbnds_500.save/SAVE already present. No operations performed.\n",
-      "SAVE folder already present in GW_analysis/kpoints_18-nbnds_500. No operations performed.\n"
+      "SAVE folder GW_analysis/kpoints_18-nbnds_500/SAVE already present. No operations performed.\n"
      ]
     }
    ],
    "source": [
-    "source_dir = 'DFT_analysis/kpoints_18-nbnds_500.save'\n",
+    "input_dir = 'DFT_analysis/kpoints_18-nbnds_500.save'\n",
     "run_dir = 'GW_analysis/kpoints_18-nbnds_500'\n",
-    "\n",
-    "save_dir = Tools.make_p2y(source_dir)\n",
-    "Tools.init_yambo_run_dir(save_dir,run_dir=run_dir)"
+    "Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)"
    ]
   },
   {
@@ -2762,24 +2754,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kpoints = [18,30,72]"
+    "kpoints = [60] #[18,30,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 4\n",
-      "Initialize a Dataset with 1 parallel tasks\n"
+      "16 2\n",
+      "Initialize a Dataset with 1 parallel tasks\n",
+      "SAVE folder GW_analysis/kpoints_60-nbnds_500/SAVE already present. No operations performed.\n"
      ]
     }
    ],
@@ -2805,11 +2798,11 @@
     "study.set_postprocessing_function(PP.yambo_parse_data)\n",
     "\n",
     "for k in kpoints:\n",
-    "    source_dir = 'DFT_analysis/kpoints_%s-nbnds_500.save'%k\n",
+    "    input_dir = 'DFT_analysis/kpoints_%s-nbnds_500.save'%k\n",
     "    run_dir = 'GW_analysis/kpoints_%s-nbnds_500'%k\n",
-    "    #Tools.init_yambo_run_dir(Tools.make_p2y(source_dir),run_dir=run_dir)\n",
-    "    #Tools.init_yambo_run_dir(Tools.make_p2y(source_dir,\n",
-    "    #    p2y_command='mpirun -np 1 p2y'),run_dir=run_dir,yambo_command='mpirun -np 1 yambo')\n",
+    "    #Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
+    "    Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir,\n",
+    "            p2y_command='mpirun -np 1 p2y',yambo_command='mpirun -np 1 yambo')\n",
     "\n",
     "    inp = I.YamboInput(args='mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',folder=run_dir)\n",
     "    inp.set_extendOut()\n",
@@ -2844,21 +2837,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pp-G-kpoints_18',\n",
-       " 'pp-K-kpoints_18',\n",
-       " 'pp-G-kpoints_30',\n",
-       " 'pp-K-kpoints_30',\n",
-       " 'pp-G-kpoints_72',\n",
-       " 'pp-K-kpoints_72']"
+       "['pp-G-kpoints_60', 'pp-K-kpoints_60']"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2869,48 +2857,145 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': 'Dataset',\n",
+       " 'run_dir': 'GW_analysis/kpoints_60-nbnds_500',\n",
+       " 'num_tasks': 1,\n",
+       " 'verbose': True,\n",
+       " 'input': {'args': 'mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',\n",
+       "  'folder': 'GW_analysis/kpoints_60-nbnds_500',\n",
+       "  'filename': 'yambo.in',\n",
+       "  'arguments': ['rim_cut',\n",
+       "   'em1d',\n",
+       "   'gw0',\n",
+       "   'HF_and_locXC',\n",
+       "   'ppa',\n",
+       "   'ExtendOut',\n",
+       "   'RIM_W'],\n",
+       "  'variables': {'StdoHash': [40.0, ''],\n",
+       "   'Nelectro': [28.0, ''],\n",
+       "   'ElecTemp': [0.0, 'eV'],\n",
+       "   'BoseTemp': [-1.0, 'eV'],\n",
+       "   'OccTresh': [1e-05, ''],\n",
+       "   'NLogCPUs': [0.0, ''],\n",
+       "   'MEM_tresh': [51200.0, 'Kb'],\n",
+       "   'FFTGvecs': [23661.0, 'RL'],\n",
+       "   'X_and_IO_nCPU_LinAlg_INV': [-1.0, ''],\n",
+       "   'X_Threads': [0.0, ''],\n",
+       "   'DIP_Threads': [0.0, ''],\n",
+       "   'SE_Threads': [0.0, ''],\n",
+       "   'RandQpts': [5000000.0, ''],\n",
+       "   'RandGvec': [200, 'RL'],\n",
+       "   'IDEm1Ref': [0.0, ''],\n",
+       "   'CUTRadius': [0.0, ''],\n",
+       "   'CUTCylLen': [0.0, ''],\n",
+       "   'CUTwsGvec': [0.7, ''],\n",
+       "   'EXXRLvcs': [60.0, 'Ha'],\n",
+       "   'VXCRLvcs': [60.0, 'Ha'],\n",
+       "   'XfnQP_INTERP_NN': [1.0, ''],\n",
+       "   'XfnQP_INTERP_shells': [20.0, ''],\n",
+       "   'XfnQP_Wv_E': [0.0, 'eV'],\n",
+       "   'XfnQP_Wv_dos': [0.0, 'eV'],\n",
+       "   'XfnQP_Wc_E': [0.0, 'eV'],\n",
+       "   'XfnQP_Wc_dos': [0.0, 'eV'],\n",
+       "   'NGsBlkXp': [8.0, 'Ha'],\n",
+       "   'CGrdSpXp': [100.0, ''],\n",
+       "   'PPAPntXp': [27.21138, 'eV'],\n",
+       "   'XTermEn': [40.0, 'eV'],\n",
+       "   'GfnQP_INTERP_NN': [1.0, ''],\n",
+       "   'GfnQP_INTERP_shells': [20.0, ''],\n",
+       "   'GfnQP_Wv_E': [0.0, 'eV'],\n",
+       "   'GfnQP_Wv_dos': [0.0, 'eV'],\n",
+       "   'GfnQP_Wc_E': [0.0, 'eV'],\n",
+       "   'GfnQP_Wc_dos': [0.0, 'eV'],\n",
+       "   'BoseCut': [0.1, ''],\n",
+       "   'GDamping': [0.1, 'eV'],\n",
+       "   'dScStep': [0.1, 'eV'],\n",
+       "   'GTermEn': [40.81708, 'eV'],\n",
+       "   'GWoIter': [0.0, ''],\n",
+       "   'GWIter': [0.0, ''],\n",
+       "   'SCEtresh': [0.01, 'eV'],\n",
+       "   'DBsIOoff': 'none',\n",
+       "   'DBsFRAGpm': 'none',\n",
+       "   'PAR_def_mode': 'balanced',\n",
+       "   'CUTGeo': 'slab z',\n",
+       "   'Chimod': 'HARTREE',\n",
+       "   'ChiLinAlgMod': 'LIN_SYS',\n",
+       "   'XfnQPdb': 'none',\n",
+       "   'XfnQP_DbGd_INTERP_mode': 'NN',\n",
+       "   'XTermKind': 'none',\n",
+       "   'kind': 'BG',\n",
+       "   'GfnQPdb': 'none',\n",
+       "   'GfnQP_DbGd_INTERP_mode': 'NN',\n",
+       "   'GTermKind': 'none',\n",
+       "   'DysSolver': 'n',\n",
+       "   'XfnQP_Z': [(1+0j), ''],\n",
+       "   'GfnQP_Z': [(1+0j), ''],\n",
+       "   'Em1Anys': [[0.0, 0.0, 0.0], ''],\n",
+       "   'CUTBox': [[0.0, 0.0, 0.0], ''],\n",
+       "   'XfnQP_E': [[0.0, 1.0, 1.0], ''],\n",
+       "   'XfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
+       "   'XfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
+       "   'QpntsRXp': [[1, 331], ''],\n",
+       "   'BndsRnXp': [[1, 500], ''],\n",
+       "   'EhEngyXp': [['-1.000000', '-1.000000'], 'eV'],\n",
+       "   'LongDrXp': [[1.0, 0.0, 0.0], ''],\n",
+       "   'GfnQP_E': [[0.0, 1.0, 1.0], ''],\n",
+       "   'GfnQP_Wv': [[0.0, 0.0, 0.0], ''],\n",
+       "   'GfnQP_Wc': [[0.0, 0.0, 0.0], ''],\n",
+       "   'GbndRnge': [[1, 500], ''],\n",
+       "   'QPkrange': [[331, 331, 28, 29], ''],\n",
+       "   'QPerange': [[1, 331, 0.0, '-1.000000'], ''],\n",
+       "   'RandGvecW': [10, 'RL'],\n",
+       "   'SE_ROLEs': 'q.qp.b',\n",
+       "   'SE_CPU': '2.1.16',\n",
+       "   'X_and_IO_ROLEs': 'q.g.k.c.v',\n",
+       "   'X_and_IO_CPU': '1.1.1.16.2',\n",
+       "   'DIP_ROLEs': 'k.c.v',\n",
+       "   'DIP_CPU': '1.16.2'}},\n",
+       " 'jobname': ['pp-K-kpoints_60',\n",
+       "  'ndb_rim_cutoff',\n",
+       "  'ndb_hf_K',\n",
+       "  'ndb_em1d-ngsblkxp_8.0-bndsrnxp_500',\n",
+       "  'ndb_dipoles-nbnds_500'],\n",
+       " 'reformat': False,\n",
+       " 'name': 'pp-K-kpoints_60'}"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#study.runs[1]"
+    "study.runs[1]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0, 1, 2, 3, 4, 5] with the parallel task_groups [[0], [1], [2], [3], [4], [5]] \n",
+      "Run the selection [0, 1] with the parallel task_groups [[0], [1]] \n",
       "\n",
       "Run the task [0] \n",
-      "Skip the run of pp-G-kpoints_18\n",
+      "Skip the run of pp-G-kpoints_60\n",
       "Task [0] ended \n",
       " \n",
       "Run the task [1] \n",
-      "Skip the run of pp-K-kpoints_18\n",
-      "Task [1] ended \n",
-      " \n",
-      "Run the task [2] \n",
-      "Skip the run of pp-G-kpoints_30\n",
-      "Task [2] ended \n",
-      " \n",
-      "Run the task [3] \n",
-      "Skip the run of pp-K-kpoints_30\n",
-      "Task [3] ended \n",
-      " \n",
-      "Run the task [4] \n",
-      "Skip the run of pp-G-kpoints_72\n",
-      "Task [4] ended \n",
-      " \n",
-      "Run the task [5] \n",
-      "Skip the run of pp-K-kpoints_72\n",
-      "Task [5] ended \n",
-      " \n"
+      "run command: mpirun -np 32 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_60.in -J \"pp-K-kpoints_60,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_60\n",
+      "slurm submit:  cd GW_analysis/kpoints_60-nbnds_500 ; sbatch job_pp-K-kpoints_60.sh\n",
+      "computation pp-K-kpoints_60 is running...\n",
+      "Submitted batch job 9703628\n"
      ]
     }
    ],
@@ -3447,7 +3532,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3461,7 +3546,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
