--- a/DFT_Analysis-ONCV.ipynb
+++ b/DFT_Analysis-ONCV.ipynb
@@ -1593,7 +1593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 103,
+   "execution_count": 4,
    "id": "4366efd6-eb1a-465c-a916-26cae83019be",
    "metadata": {},
    "outputs": [
@@ -1626,7 +1626,7 @@
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 103,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1994,7 +1994,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 5,
    "id": "2d482de1-2847-41af-846b-b3bd71e86147",
    "metadata": {},
    "outputs": [],
@@ -2008,7 +2008,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 6,
    "id": "5872c364-96ad-4047-a87c-f372c8551916",
    "metadata": {},
    "outputs": [
@@ -2017,7 +2017,7 @@
       "text/plain": [
        "{'control': {'calculation': \"'nscf'\",\n",
        "  'verbosity': \"'high'\",\n",
-       "  'prefix': \"'kpoints_72-nbnds_30'\",\n",
+       "  'prefix': \"'pwscf'\",\n",
        "  'outdir': \"'./'\",\n",
        "  'pseudo_dir': \"'../pseudos'\"},\n",
        " 'system': {'force_symmorphic': '.true.',\n",
@@ -2037,11 +2037,11 @@
        " 'atomic_positions': {'type': 'alat',\n",
        "  'values': [['Sn', array([0.        , 0.57735027, 0.090514  ])],\n",
        "   ['Sn', array([ 0.5       ,  0.28867513, -0.090514  ])]]},\n",
-       " 'kpoints': {'type': 'automatic', 'values': ([72, 72, 1], [0.0, 0.0, 0.0])},\n",
+       " 'kpoints': {'type': 'automatic', 'values': ([15, 15, 1], [0.0, 0.0, 0.0])},\n",
        " 'cell_parameters': {}}"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2054,7 +2054,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 7,
    "id": "6158de2a-15db-446f-9a9f-bcdc184a4c70",
    "metadata": {},
    "outputs": [],
@@ -2064,7 +2064,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 72,
+   "execution_count": 8,
    "id": "e38422cb-1e04-46cf-b202-2829c55938fa",
    "metadata": {},
    "outputs": [
@@ -2089,17 +2089,57 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 11,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'label': 'Dataset',\n",
+       " 'run_dir': 'DFT_analysis-ONCV',\n",
+       " 'num_tasks': 2,\n",
+       " 'verbose': True,\n",
+       " 'input': {'control': {'calculation': \"'nscf'\",\n",
+       "   'verbosity': \"'high'\",\n",
+       "   'prefix': \"'kpoints_18-nbnds_500'\",\n",
+       "   'outdir': \"'./'\",\n",
+       "   'pseudo_dir': \"'../pseudos'\"},\n",
+       "  'system': {'force_symmorphic': '.true.',\n",
+       "   'nbnd': 500,\n",
+       "   'lspinorb': '.true.',\n",
+       "   'noncolin': '.true.',\n",
+       "   'ntyp': '1',\n",
+       "   'nat': '2',\n",
+       "   'ibrav': 4,\n",
+       "   'celldm(1)': 8.71966,\n",
+       "   'celldm(3)': 2.86708426704711,\n",
+       "   'ecutwfc': 80},\n",
+       "  'electrons': {'diago_full_acc': '.false.', 'conv_thr': 1e-06},\n",
+       "  'ions': {},\n",
+       "  'cell': {},\n",
+       "  'atomic_species': {'Sn': [118.71, 'Sn_ONCV_PBE_FR-1.1.upf']},\n",
+       "  'atomic_positions': {'type': 'alat',\n",
+       "   'values': [['Sn', array([0.        , 0.57735027, 0.090514  ])],\n",
+       "    ['Sn', array([ 0.5       ,  0.28867513, -0.090514  ])]]},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([18, 18, 1], [0.0, 0.0, 0.0])},\n",
+       "  'cell_parameters': {}},\n",
+       " 'source_dir': 'DFT_analysis-ONCV/gs_converged.save',\n",
+       " 'name': 'kpoints_18-nbnds_500'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "#study.runs[0]"
+    "study.runs[0]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "id": "2936d7bf-43ae-4b8d-9cf0-99382f9fe33f",
    "metadata": {},
    "outputs": [
@@ -2110,10 +2150,10 @@
       "Run the selection [0] with the parallel task_groups [[0]] \n",
       "\n",
       "Run the task [0] \n",
-      "copy source_dir DFT_analysis-ONCV/gs_converged.save in the /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis-ONCV/kpoints_18-nbnds_500.save\n",
-      "run command: mpirun -np 16 pw.x -inp kpoints_18-nbnds_500.in > kpoints_18-nbnds_500.log\n",
-      "slurm submit:  cd DFT_analysis-ONCV ; sbatch job_kpoints_18-nbnds_500.sh\n",
-      "computation kpoints_18-nbnds_500 is running...\n"
+      "Skip the run of kpoints_18-nbnds_500\n",
+      "The folder /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis-ONCV/kpoints_18-nbnds_500.save already exists. Source_dir DFT_analysis-ONCV/gs_converged.save not copied\n",
+      "Task [0] ended \n",
+      " \n"
      ]
     }
    ],
