--- a/GW_Analysis.ipynb
+++ b/GW_Analysis.ipynb
@@ -2222,7 +2222,7 @@
     "We observe that: \n",
     "* the usage of the BG terminator leads to a (apparently) different asymptotic value at $\\Gamma$\n",
     "* at K the values are the same but there no advantage in using the terminator with 500 bands\n",
-    "* the computational cost of the single computation is higher with the terminato\n",
+    "* the computational cost of the single computation is higher with the terminator\n",
     "\n",
     "So we do not use the terminator in the subsequent computations."
    ]
