--- a/GW_Analysis-ONCV.ipynb
+++ b/GW_Analysis-ONCV.ipynb
@@ -68,48 +68,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a Yambo calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 2,\n",
-       " 'ntasks_per_node': 32,\n",
-       " 'cpus_per_task': 1,\n",
-       " 'omp_num_threads': 1,\n",
-       " 'gpus_per_node': None,\n",
-       " 'memory': '125000',\n",
-       " 'time': None,\n",
-       " 'partition': 'slownodes',\n",
-       " 'account': None,\n",
-       " 'qos': None,\n",
-       " 'map_by': None,\n",
-       " 'pe': 1,\n",
-       " 'rank_by': None,\n",
-       " 'executable': 'yambo',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': True,\n",
-       " 'verbose': True,\n",
-       " 'fatlog': False}"
-      ]
-     },
-     "execution_count": 37,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -132,12 +93,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a Yambo calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 16,\n",
+       " 'ntasks_per_node': 4,\n",
+       " 'cpus_per_task': 32,\n",
+       " 'omp_num_threads': 8,\n",
+       " 'gpus_per_node': 4,\n",
+       " 'memory': '240GB',\n",
+       " 'time': '23:59:00',\n",
+       " 'partition': 'm100_usr_prod',\n",
+       " 'account': 'IscrC_PrExIn',\n",
+       " 'qos': None,\n",
+       " 'map_by': 'socket',\n",
+       " 'pe': 8,\n",
+       " 'rank_by': 'core',\n",
+       " 'executable': 'yambo',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': False,\n",
+       " 'verbose': True,\n",
+       " 'fatlog': False}"
+      ]
+     },
+     "execution_count": 17,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for m100\n",
-    "nodes = 8 # 16\n",
+    "nodes = 16 # 16\n",
     "ntasks_per_node = 4\n",
     "cpus_per_task=32\n",
     "omp_num_threads=8\n",
@@ -1159,30 +1159,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
-    "kpoints = [18,30,42,60,72]"
+    "kpoints = [42,60,72] #[18,30,42,60,72]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "16 2\n",
-      "Initialize a Dataset with 1 parallel tasks\n",
-      "Build the r_setup in the yambo_dir path GW_analysis/kpoints_72-nbnds_500\n"
+      "32 2\n",
+      "Initialize a Dataset with 4 parallel tasks\n",
+      "SAVE folder GW_analysis-ONCV/kpoints_42-nbnds_500/SAVE already present. No operations performed.\n",
+      "SAVE folder GW_analysis-ONCV/kpoints_60-nbnds_500/SAVE already present. No operations performed.\n",
+      "SAVE folder GW_analysis-ONCV/kpoints_72-nbnds_500/SAVE already present. No operations performed.\n"
      ]
     }
    ],
    "source": [
-    "ntasks_c = 16\n",
+    "ntasks_c = 32 #16\n",
     "ntasks_v = int(ntasks/ntasks_c)\n",
     "print(ntasks_c,ntasks_v)\n",
     "\n",
@@ -1203,12 +1205,12 @@
     "study.set_postprocessing_function(PP.yambo_parse_data)\n",
     "\n",
     "for k in kpoints:\n",
-    "    input_dir = 'DFT_analysis/kpoints_%s-nbnds_500.save'%k\n",
-    "    run_dir = 'GW_analysis/kpoints_%s-nbnds_500'%k\n",
+    "    input_dir = 'DFT_analysis-ONCV/kpoints_%s-nbnds_500.save'%k\n",
+    "    run_dir = 'GW_analysis-ONCV/kpoints_%s-nbnds_500'%k\n",
     "    #Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir)\n",
-    "    Tools.build_r_setup(yambo_dir=run_dir)\n",
-    "    #Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir,\n",
-    "    #        p2y_command='mpirun -np 1 p2y',yambo_command='mpirun -np 1 yambo')\n",
+    "    #Tools.build_r_setup(yambo_dir=run_dir)\n",
+    "    Tools.init_yambo_dir(yambo_dir=run_dir,input_dir=input_dir,\n",
+    "            p2y_command='mpirun -np 1 p2y',yambo_command='mpirun -np 1 yambo')\n",
     "\n",
     "    inp = I.YamboInput(args='mpirun -np 1 yambo -r -k hartee -dyson n -gw0 p -V all',folder=run_dir)\n",
     "    inp.set_extendOut()\n",
@@ -1222,7 +1224,7 @@
     "    inp.set_array_variables(units=NGsBlkXp_units,NGsBlkXp=NGsBlkXp)\n",
     "    inp.set_array_variables(BndsRnXp=BndsRnXp,GbndRnge=GbndRnge)\n",
     "    #inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 2 nodes on ismhpc (with 32 mpi and 1 omp per node)\n",
-    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.1.16') # for 8 nodes on m100\n",
+    "    inp.set_scalar_variables(SE_ROLEs='q.qp.b',SE_CPU='2.2.16') # for 8 nodes on m100\n",
     "    inp.set_scalar_variables(X_and_IO_ROLEs='q.g.k.c.v',X_and_IO_CPU='1.1.1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    inp.set_scalar_variables(DIP_ROLEs='k.c.v',DIP_CPU='1.%s.%s'%(ntasks_c,ntasks_v))\n",
     "    \n",
@@ -1242,17 +1244,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "['pp-G-kpoints_18',\n",
-       " 'pp-K-kpoints_18',\n",
-       " 'pp-G-kpoints_30',\n",
-       " 'pp-K-kpoints_30',\n",
-       " 'pp-G-kpoints_42',\n",
+       "['pp-G-kpoints_42',\n",
        " 'pp-K-kpoints_42',\n",
        " 'pp-G-kpoints_60',\n",
        " 'pp-K-kpoints_60',\n",
@@ -1260,7 +1258,7 @@
        " 'pp-K-kpoints_72']"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 26,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1271,69 +1269,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#study.runs[1]"
+    "#study.runs[4]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0, 1, 2, 3, 4, 5, 6, 7, 8, 9] with the parallel task_groups [[0], [1], [2], [3], [4], [5], [6], [7], [8], [9]] \n",
+      "Run the selection [1, 3, 5] with the parallel task_groups [[1, 3, 5]] \n",
       "\n",
-      "Run the task [0] \n",
-      "Skip the run of pp-G-kpoints_18\n",
-      "Task [0] ended \n",
+      "Run the task [1, 3, 5] \n",
+      "run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_42.in -J \"pp-K-kpoints_42,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_42\n",
+      "run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_60.in -J \"pp-K-kpoints_60,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_60slurm submit:  \n",
+      "cd GW_analysis-ONCV/kpoints_42-nbnds_500 ; sbatch job_pp-K-kpoints_42.shslurm submit: run command: mpirun -np 64 --map-by socket:PE=8 --rank-by core yambo -F pp-K-kpoints_72.in -J \"pp-K-kpoints_72,ndb_rim_cutoff,ndb_hf_K,ndb_em1d-ngsblkxp_8.0-bndsrnxp_500,ndb_dipoles-nbnds_500\" -C pp-K-kpoints_72\n",
       " \n",
-      "Run the task [1] \n",
-      "Skip the run of pp-K-kpoints_18\n",
-      "Task [1] ended \n",
-      " \n",
-      "Run the task [2] \n",
-      "Skip the run of pp-G-kpoints_30\n",
-      "Task [2] ended \n",
-      " \n",
-      "Run the task [3] \n",
-      "Skip the run of pp-K-kpoints_30\n",
-      "Task [3] ended \n",
-      " \n",
-      "Run the task [4] \n",
-      "Skip the run of pp-G-kpoints_42\n",
-      "Task [4] ended \n",
-      " \n",
-      "Run the task [5] \n",
-      "Skip the run of pp-K-kpoints_42\n",
-      "Task [5] ended \n",
-      " \n",
-      "Run the task [6] \n",
-      "Skip the run of pp-G-kpoints_60\n",
-      "Task [6] ended \n",
-      " \n",
-      "Run the task [7] \n",
-      "Skip the run of pp-K-kpoints_60\n",
-      "Task [7] ended \n",
-      " \n",
-      "Run the task [8] \n",
-      "Skip the run of pp-G-kpoints_72\n",
-      "Task [8] ended \n",
-      " \n",
-      "Run the task [9] \n",
-      "Skip the run of pp-K-kpoints_72\n",
-      "Task [9] ended \n",
-      " \n"
+      "cd GW_analysis-ONCV/kpoints_60-nbnds_500 ; sbatch job_pp-K-kpoints_60.sh\n",
+      "slurm submit:  cd GW_analysis-ONCV/kpoints_72-nbnds_500 ; sbatch job_pp-K-kpoints_72.sh\n",
+      "computation pp-K-kpoints_42 is running...\n",
+      "computation pp-K-kpoints_60 is running...\n",
+      "computation pp-K-kpoints_72 is running...\n"
      ]
     }
    ],
    "source": [
-    "results = study.run()"
+    "results = study.run(selection=[1,3,5])"
    ]
   },
   {
@@ -1862,7 +1830,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -1876,7 +1844,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
