--- a/DFT_Analysis-ONCV.ipynb
+++ b/DFT_Analysis-ONCV.ipynb
@@ -47,48 +47,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "7f849d39-dc30-4225-abf0-ef50b8eced86",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
-     ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "{'scheduler': 'slurm',\n",
-       " 'nodes': 1,\n",
-       " 'ntasks_per_node': 16,\n",
-       " 'cpus_per_task': 2,\n",
-       " 'omp_num_threads': 2,\n",
-       " 'gpus_per_node': None,\n",
-       " 'memory': '125000',\n",
-       " 'time': None,\n",
-       " 'partition': 'all12h',\n",
-       " 'account': None,\n",
-       " 'qos': None,\n",
-       " 'map_by': None,\n",
-       " 'pe': 1,\n",
-       " 'rank_by': None,\n",
-       " 'executable': 'pw.x',\n",
-       " 'skip': True,\n",
-       " 'clean_restart': True,\n",
-       " 'dry_run': False,\n",
-       " 'wait_end_run': True,\n",
-       " 'activate_BeeOND': True,\n",
-       " 'verbose': True}"
-      ]
-     },
-     "execution_count": 3,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# RunRules for ismhpc\n",
     "# The product of ntasks_per_node*cpus_per_task is equal to 32. \n",
@@ -110,10 +72,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "61f8944e-574e-4361-a69e-479c12943f5b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Initialize a QuantumESPRESSO calculator with scheduler slurm\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "{'scheduler': 'slurm',\n",
+       " 'nodes': 1,\n",
+       " 'ntasks_per_node': 4,\n",
+       " 'cpus_per_task': 32,\n",
+       " 'omp_num_threads': 8,\n",
+       " 'gpus_per_node': 4,\n",
+       " 'memory': '120GB',\n",
+       " 'time': '23:59:00',\n",
+       " 'partition': 'm100_usr_prod',\n",
+       " 'account': 'IscrC_PrExIn',\n",
+       " 'qos': None,\n",
+       " 'map_by': 'socket',\n",
+       " 'pe': 8,\n",
+       " 'rank_by': 'core',\n",
+       " 'executable': 'pw.x',\n",
+       " 'skip': True,\n",
+       " 'clean_restart': True,\n",
+       " 'dry_run': False,\n",
+       " 'wait_end_run': True,\n",
+       " 'activate_BeeOND': False,\n",
+       " 'verbose': True}"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# RunRules for m100\n",
     "nodes = 1\n",
@@ -2059,7 +2059,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "kvalues = [18] #[18,30,42,60,72]"
+    "kvalues = [42,60,72] #[18,30,42,60,72]"
    ]
   },
   {
@@ -2072,12 +2072,12 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Initialize a Dataset with 2 parallel tasks\n"
+      "Initialize a Dataset with 4 parallel tasks\n"
      ]
     }
    ],
    "source": [
-    "study = D.Dataset(run_dir=run_dir,num_tasks=2)\n",
+    "study = D.Dataset(run_dir=run_dir,num_tasks=4)\n",
     "study.set_postprocessing_function(PP.pw_parse_data)\n",
     "\n",
     "for k in kvalues:\n",
@@ -2089,7 +2089,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 9,
    "id": "cef5f9a1-ea58-4b33-b719-2fbfca2da5c0",
    "metadata": {},
    "outputs": [
@@ -2098,11 +2098,11 @@
       "text/plain": [
        "{'label': 'Dataset',\n",
        " 'run_dir': 'DFT_analysis-ONCV',\n",
-       " 'num_tasks': 2,\n",
+       " 'num_tasks': 4,\n",
        " 'verbose': True,\n",
        " 'input': {'control': {'calculation': \"'nscf'\",\n",
        "   'verbosity': \"'high'\",\n",
-       "   'prefix': \"'kpoints_18-nbnds_500'\",\n",
+       "   'prefix': \"'kpoints_42-nbnds_500'\",\n",
        "   'outdir': \"'./'\",\n",
        "   'pseudo_dir': \"'../pseudos'\"},\n",
        "  'system': {'force_symmorphic': '.true.',\n",
@@ -2122,13 +2122,13 @@
        "  'atomic_positions': {'type': 'alat',\n",
        "   'values': [['Sn', array([0.        , 0.57735027, 0.090514  ])],\n",
        "    ['Sn', array([ 0.5       ,  0.28867513, -0.090514  ])]]},\n",
-       "  'kpoints': {'type': 'automatic', 'values': ([18, 18, 1], [0.0, 0.0, 0.0])},\n",
+       "  'kpoints': {'type': 'automatic', 'values': ([42, 42, 1], [0.0, 0.0, 0.0])},\n",
        "  'cell_parameters': {}},\n",
        " 'source_dir': 'DFT_analysis-ONCV/gs_converged.save',\n",
-       " 'name': 'kpoints_18-nbnds_500'}"
+       " 'name': 'kpoints_42-nbnds_500'}"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -2147,12 +2147,28 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Run the selection [0] with the parallel task_groups [[0]] \n",
+      "Run the selection [0, 1, 2] with the parallel task_groups [[0, 1, 2]] \n",
       "\n",
-      "Run the task [0] \n",
-      "Skip the run of kpoints_18-nbnds_500\n",
-      "The folder /work/dalessandro/2D_ELECTRONIC_OPTICAL_PROPERTIES/Xenes/Stanene/DFT_analysis-ONCV/kpoints_18-nbnds_500.save already exists. Source_dir DFT_analysis-ONCV/gs_converged.save not copied\n",
-      "Task [0] ended \n",
+      "Run the task [0, 1, 2] \n",
+      "copy source_dir DFT_analysis-ONCV/gs_converged.save in the /m100_work/IscrC_PrExIn/Stanene/DFT_analysis-ONCV/kpoints_42-nbnds_500.save\n",
+      "copy source_dir DFT_analysis-ONCV/gs_converged.save in the /m100_work/IscrC_PrExIn/Stanene/DFT_analysis-ONCV/kpoints_60-nbnds_500.save\n",
+      "copy source_dir DFT_analysis-ONCV/gs_converged.save in the /m100_work/IscrC_PrExIn/Stanene/DFT_analysis-ONCV/kpoints_72-nbnds_500.save\n",
+      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_72-nbnds_500.in > kpoints_72-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis-ONCV ; sbatch job_kpoints_72-nbnds_500.sh\n",
+      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_60-nbnds_500.in > kpoints_60-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis-ONCV ; sbatch job_kpoints_60-nbnds_500.sh\n",
+      "computation kpoints_72-nbnds_500 is running...\n",
+      "computation kpoints_60-nbnds_500 is running...\n",
+      "run command: mpirun -np 4 --map-by socket:PE=8 --rank-by core pw.x -inp kpoints_42-nbnds_500.in > kpoints_42-nbnds_500.log\n",
+      "slurm submit:  cd DFT_analysis-ONCV ; sbatch job_kpoints_42-nbnds_500.sh\n",
+      "computation kpoints_42-nbnds_500 is running...\n",
+      "Submitted batch job 9773312\n",
+      "Submitted batch job 9773313\n",
+      "Submitted batch job 9773314\n",
+      "computation kpoints_42-nbnds_500 ended\n",
+      "computation kpoints_60-nbnds_500 ended\n",
+      "computation kpoints_72-nbnds_500 ended\n",
+      "Task [0, 1, 2] ended \n",
       " \n"
      ]
     }
@@ -2285,7 +2301,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -2299,7 +2315,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.8"
+   "version": "3.8.2"
   }
  },
  "nbformat": 4,
